# OlY.AGI

./: .gitignore  .version_info  A.D.I.N.N Roadmap.py  CHANGELOG.md  CONFIDENTIAL_ADINN_NOTICE.md  LICENSE  LICENSE.md  Makefile  README.md  __init__.py  pyproject.toml  setup.py
OLY Version/: Ideas.txt  Viitoare inplementari.py
OLY Version/Version OL-y/: OL-y v0.05 428M.py  OL-y v0.05.4 510M.py  Ol-y Last Version 2024.py  Ol-y v0.0.5.2.2 40M.py  Ol-y v0.0.5.5.2 1.5B.py  Ol-y v0.01.2.py  Ol-y v0.05.1 507M.py  Ol-y v0.05.2 507M.py  Ol-y v0.05.3 510M.py  Ol-y v0.05.5 208M → 800M.py  Ol-y v0.05.5 52M→800M.py  Ol-y v0.05.5.1 208M → 800M.py
cognitive_architecture/reasoning/: __init__.py
core_model/: __init__.py
core_model/attention/: __init__.py
core_model/embeddings/: position_embedding.py  rotary_embedding.py  token_embedding.py
core_model/scaling/: model_parallel.py  pipeline_parallel.py  tensor_parallel.py
distributed/: __init__.py
distributed/optimization/: distributed_optimizer.py  gradient_accumulation.py
distributed/pipeline/: micro_batch_pipeline.py  stage_pipeline.py
distributed/sharding/: computation_sharding.py  parameter_sharding.py
emotional_intelligence/analysis/: emotion_classification.py  emotion_detection.py  sentiment_analysis.py
emotional_intelligence/models/: emotion_embedding.py  emotion_transformer.py
emotional_intelligence/regulation/: __init__.py  emotion_control.py  response_modulation.py
evaluation/: __init__.py
lab/: lab_config.yaml
requirements/: base.txt  dev.txt  distributed.txt  prod.txt
training/: __init__.py
(+128 files in other folders)
