[tool.poetry]
name = "oly-agi"
version = "0.1.0"
description = "OLy AGI Framework - Advanced Emotional AI System with 5.9T parameters"
authors = ["KISS SEBASTIAN CRISTIAN"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
transformers = "^4.30.0"
numpy = "^1.24.0"
pyyaml = "^6.0.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
